--- a/molecules/forms/forms.html
+++ b/molecules/forms/forms.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Blockquotes | Delta Design System</title>
+    <title>Forms | Delta Design System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
@@ -35,36 +35,9 @@
     </header>
     <main>
       <article>
-        <h1 class="title">Blockquotes</h1>
-        <p>The blockquote element represents a section that is quoted from another source. Content inside a blockquote must be quoted from another source, whose address, if it has one, may be cited in the cite attribute.</p>
-        <p><cite><a href="https://html.spec.whatwg.org/multipage/grouping-content.html#the-blockquote-element" target="_blank">HTML Living Standard</a></cite></p>
-        <p>As with other modules in the Delta Design System, we separate the function of a blockquote from the presentation of a blockquote. In other words, don't think of blockquotes only in terms of their style, but also what they represent in the absence of style.</p>
+        <h1>Article Title</h1>
         <section class="row wide">
-          <h2>Blockquote Example</h2>
-          <div class="column">
-            <blockquote cite="https://alistapart.com/article/responsive-web-design/">
-              <p>Now more than ever, we’re designing work meant to be viewed along a gradient of different experiences.</p>
-              <p><cite><a href="https://alistapart.com/article/responsive-web-design/" target="_blank">Ethan Marcotte, Responsive Web Design</a></cite></p>
-            </blockquote>
-          </div>
-          <div class="row wide">
-            <div class="column">
-              <p>Searching the internet, there are many different ways to mark-up blockquotes. The Delta Design System mostly adheres to the approach illustrated by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blockquote" target="_blank">MDN web docs</a>:</p>
-              <ul>
-                <li>We add a <code>&lt;cite&gt;</code> to the opening <code>&lt;blockquote&gt;</code> tag.</li>
-                <li>We use <code>p</code> tags inside the <code>&lt;blockquote&gt;</code> tag.</li>
-                <li>We do not, however, use a <code>&lt;footer&gt;</code> tag in our blockquote.</li>
-              </ul>
-              <p><code>&lt;blockquote&gt;</code> elements are left-aligned by default, but you can add a <code>.center</code> or <code>.right</code> class to change the horizontal alignment to suit your needs.</p>
-              <figure>
-                <figcaption>html</figcaption>
-<pre><code>&lt;blockquote cite=&quot;https://alistapart.com/article/responsive-web-design/&quot;&gt;
-  &lt;p&gt;Now more than ever, we&rsquo;re designing work meant to be viewed along a gradient of different experiences.&lt;/p&gt;
-  &lt;p&gt;&lt;cite&gt;&lt;a href=&quot;https://alistapart.com/article/responsive-web-design/&quot; target=&quot;_blank&quot;&gt;Ethan Marcotte, Responsive Web Design&lt;/a&gt;&lt;/cite&gt;&lt;/p&gt;
-&lt;/blockquote&gt;</code></pre>
-              </figure>
-            </div>
-          </div>
+          <h2>Section Title</h2>
         </section>
       </article>
     </main>
