--- a/organisms/banners/banners.html
+++ b/organisms/banners/banners.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ovo&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
   </head>
   <body>
     <header>
-      <h1>Header</h1>
       <div class="logo">
         <a href="../../index.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
@@ -22,7 +23,7 @@
           <svg class="menu-toggle-open" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"/></svg>
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
-        <ul>
+        <ul id="header-navigation">
           <li><a href="../../index.html">Overview</a></li>
           <li><a href="../../atoms/atoms.html">Atoms</a></li>
           <li><a href="../../molecules/molecules.html">Molecules</a></li>
@@ -34,28 +35,24 @@
     </header>
     <main>
       <article>
-        <section class="row wide">
-          <div class="column">
-            <h1 class="title">Banners</h1>
-            <p>Banners are a key visual organism in the Delta Design System. We designed banners for maximum flexibility. Here are the options you can control:</p>
-            <ul>
-              <li>Photo background (if a photo background is wanted; this is an inline setting)</li>
-              <li>Overlay color and opacity (this is an inline setting)</li>
-              <li>Point-of-origin for photo background (center, center-bottom, center-top, left-center, left-bottom, left-top, right-center, right-bottom, or right-top)
-              <li>Horizontal position of text (left or right)</li>
-              <li>Banner height (tall or short)</li>
-            </ul>
-          </div>
-        </section>
-        <div class="banner tall right bg-photo light center" style="background-image: url(../../assets/images/london-2x.jpg);">
+        <h1 class="title">Banners</h1>
+        <p>Banners are a key visual organism in the Delta Design System. We designed banners for maximum flexibility. Here are the options you can control:</p>
+        <ul>
+          <li>Photo background (if a photo background is wanted; this is an inline setting)</li>
+          <li>Overlay color and opacity (this is an inline setting)</li>
+          <li>Point-of-origin for photo background (center, center-bottom, center-top, left-center, left-bottom, left-top, right-center, right-bottom, or right-top)
+          <li>Horizontal position of text (left or right)</li>
+          <li>Banner height (tall or short)</li>
+        </ul>
+        <section class="banner tall right bg-photo light center" style="margin-top: 2rem; background-image: url(../../assets/images/london-2x.jpg);">
           <div class="overlay" style="opacity: 0;"></div>
           <div class="text">
-            <h1>Tall Photo Banner</h1>
+            <h2>Tall Photo Banner</h2>
             <p>This is a tall photo banner, and the content is right-aligned using the '.right' class. Because the photo content is light, we apply the '.light' class to the banner, and this sets the content to black. Also note that the overlay opacity is set to zero.</p>
             <button type="button">Button</button>
             <p><cite>Photo: <a href="https://www.stockio.com/free-photo/london-235" target="_blank">London</a> by Richard Tilney-Basset</cite></p>
           </div>
-        </div>
+        </section>
         <section class="row wide">
           <h2>Photo Banner Options</h2>
           <div class="column">
@@ -69,8 +66,13 @@
               <li>Use either a <code>.left</code> or <code>.right</code> class to control whether the banner's content aligns left or right horizontally (on screens wider than 48rem).</li>
               <li>The <code>.bg-photo</code> class sets up the banner for a background-photo.</li>
               <li>The <code>.light</code> or <code>.dark</code> class is used to tell the css the overall tone of the background photo. If the class is set to <code>.light</code> (for a light photo), the content is set to <code>color: $black</code>. If the class is set to <code>.dark</code> (for a dark photo), the content is set to <code>color: $white</code>.</li>
-              <li>Next come the background photo alignment options:</li>
-              <figure style="padding-top: 0;">
+              <li>Next come the background photo alignment options.</li>
+              <li>Lastly, we use an inline <code>style</code> attribute to set the <code>background-image</code>.</li>
+              <li>At the next level down we have an <code style="white-space: normal;">&lt;div class=&quot;overlay&quot; style=&quot;opacity: 0;&quot;&gt;</code> element. This inline element enables us to cast an overlay atop the background image to improve readability.</li>
+              <li>The content of the banner is placed in a <code>&lt;div class=&quot;text&quot;&gt;</code> container. This container always stretches to fit the full height of the banner and is always positioned in the vertical center of the banner with enough padding to make it legible (and consistent with the rest of the spacing in the design system). You can change the vertical alignment of the <code>.text</code> <code>div</code> by setting an inline <code>justify-content</code> style to the <code>.banner</code>.</li>
+            </ol>
+            <p>The <code>background-position</code> options are currently:</p>
+            <figure style="padding-top: 1rem;">
 <pre><code>.center {background-position: center center;}
 .center-bottom {background-position: center bottom;}
 .center-top {background-position: center top;}
@@ -80,22 +82,18 @@
 .right-bottom {background-position: right bottom;}
 .right-center {background-position: right center;}
 .right-top {background-position: right top;}</code></pre>
-              </figure>
-              <li>Lastly, we use an inline <code>style</code> attribute to set the <code>background-image</code>.</li>
-              <li>At the next level down we have an <code style="white-space: normal;">&lt;div class=&quot;overlay&quot; style=&quot;opacity: 0;&quot;&gt;</code> element. This inline element enables us to cast an overlay atop the background image to improve readability.</li>
-              <li>The content of the banner is placed in a <code>&lt;div class=&quot;text&quot;&gt;</code> container. This container always stretches to fit the full height of the banner and is always positioned in the vertical center of the banner with enough padding to make it legible (and consistent with the rest of the spacing in the design system). You can change the vertical alignment of the <code>.text</code> <code>div</code> by setting an inline <code>justify-content</code> style to the <code>.banner</code>.</li>
-            </ol>
+            </figure>
           </div>
         </section>
-        <div class="banner right">
+        <section class="banner right">
           <img src="../../assets/images/house-2x.jpg" srcset="../../assets/images/house-1x.jpg 1x, ../../assets/images/house-2x.jpg 2x" alt="Example of photo used with banner">
           <div class="text">
-            <h1>Side by Side Banner</h1>
+            <h2>Side by Side Banner</h2>
             <p>With this type of banner, you can create content with an image alongside (instead of used as a background) content.</p>
             <button type="button">Button</button>
             <p><cite>Photo: <a href="https://www.stockio.com/free-photo/house-jonas-lavoie-levesque" target="_blank">House</a> by Jonas Lavoie-Levesque</cite></p>
           </div>
-        </div>
+        </section>
         <section class="row wide">
           <h2>Side by Side Banner Details</h2>
           <div class="column">
@@ -108,13 +106,13 @@
             </ul>
           </div>
         </section>
-        <div class="banner dark bg-lt-blue">
+        <section class="banner dark bg-lt-blue">
           <div class="text">
-            <h1>Simple Solid Banner</h1>
+            <h2>Simple Solid Banner</h2>
             <p>Ever need something simple to call attention to some content? That's where this banner comes in.</p>
             <button type="button">Button</button>
           </div>
-        </div>
+        </section>
         <section class="row wide">
           <h2>Simple Solid Banner Details</h2>
           <div class="column">
@@ -130,10 +128,9 @@
       </article>
     </main>
     <footer>
-      <h1>Footer</h1>
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
-          <ul>
+          <ul id="footer-navigation">
             <li><a href="../../index.html">Overview</a></li>
             <li><a href="../../atoms/atoms.html">Atoms</a></li>
             <li><a href="../../molecules/molecules.html">Molecules</a></li>
@@ -145,7 +142,7 @@
         <section class="meta-content column">
           <div class="logo">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
-            <h1 class="center">The Delta Design System</h1>
+            <h2 class="center">The Delta Design System</h2>
           </div>
           <div class="github">
             <a href="https://github.com/cdfournier/delta-design-system" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 2C6.475 2 2 6.475 2 12a9.994 9.994 0 0 0 6.838 9.488c.5.087.687-.213.687-.476 0-.237-.013-1.024-.013-1.862-2.512.463-3.162-.612-3.362-1.175-.113-.288-.6-1.175-1.025-1.413-.35-.187-.85-.65-.013-.662.788-.013 1.35.725 1.538 1.025.9 1.512 2.338 1.087 2.912.825.088-.65.35-1.087.638-1.337-2.225-.25-4.55-1.113-4.55-4.938 0-1.088.387-1.987 1.025-2.688-.1-.25-.45-1.275.1-2.65 0 0 .837-.262 2.75 1.026a9.28 9.28 0 0 1 2.5-.338c.85 0 1.7.112 2.5.337 1.912-1.3 2.75-1.024 2.75-1.024.55 1.375.2 2.4.1 2.65.637.7 1.025 1.587 1.025 2.687 0 3.838-2.337 4.688-4.562 4.938.362.312.675.912.675 1.85 0 1.337-.013 2.412-.013 2.75 0 .262.188.574.688.474A10.016 10.016 0 0 0 22 12c0-5.525-4.475-10-10-10z"/></svg></a>
@@ -160,7 +157,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://unpkg.com/headroom.js@0.9.4/dist/headroom.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="../../assets/scripts/site.js"></script>
+    <script>
+      AOS.init({duration: 600});
+    </script>
     <script>
       var myElement = document.querySelector('header');
       var headroom  = new Headroom(myElement);
