--- a/atoms/forms/forms.html
+++ b/atoms/forms/forms.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ovo&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
   </head>
   <body>
     <header>
-      <h1>Header</h1>
       <div class="logo">
         <a href="../../index.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
@@ -22,7 +23,7 @@
           <svg class="menu-toggle-open" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"/></svg>
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
-        <ul>
+        <ul id="header-navigation">
           <li><a href="../../index.html">Overview</a></li>
           <li><a href="../../atoms/atoms.html">Atoms</a></li>
           <li><a href="../../molecules/molecules.html">Molecules</a></li>
@@ -34,15 +35,11 @@
     </header>
     <main>
       <article>
-        <section class="row wide">
-          <div class="column">
-            <h1 class="title">Forms and Inputs</h1>
-            <p>The &lt;input&gt; element is used to create interactive controls for forms in order to accept or retrieve data from/for the user.</p>
-            <p>The function or value of an <code>&lt;input&gt;</code> depends on the value of its 'type attribute'. For more information on <code>&lt;input&gt;</code> values, please see the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#Form_<input>_types" target="_blank">MDN web docs</a>.</p>
-            <p>As with other elements in the Delta Design System, we try to be as semantic and use the fewest elements as possible to create our forms. We use css transitions to move the <code>&lt;label&gt;</code> out of place and expose the <code>:placeholder</code> when the <code>&lt;input&gt;</code> is in the <code>:focus</code> state.</p>
-            <p>All <code>&lt;input&gt;</code> fields (including <code>&lt;button&gt;</code>) must also include both the <code>&lt;span class=&quot;message&quot;&gt;</code> in order to render the vertical spacing for validation messages properly and eliminate <a href="https://en.wiktionary.org/wiki/jank" target="_blank">jank</a>. To show an <code>.errow</code> or <code>.valid</code> message, simply add a <code>.show</code> class to the appropriate message whenever necessary.</p>
-          </div>
-        </section>
+        <h1 class="title">Forms and Inputs</h1>
+        <p>The &lt;input&gt; element is used to create interactive controls for forms in order to accept or retrieve data from/for the user.</p>
+        <p>The function or value of an <code>&lt;input&gt;</code> depends on the value of its 'type attribute'. For more information on <code>&lt;input&gt;</code> values, please see the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input" target="_blank">MDN web docs</a>.</p>
+        <p>As with other elements in the Delta Design System, we try to be as semantic and use the fewest elements as possible to create our forms. We use css transitions to move the <code>&lt;label&gt;</code> out of place and expose the <code>:placeholder</code> when the <code>&lt;input&gt;</code> is in the <code>:focus</code> state.</p>
+        <p>All <code>&lt;input&gt;</code> fields (including <code>&lt;button&gt;</code>) must also include both the <code>&lt;span class=&quot;message&quot;&gt;</code> in order to render the vertical spacing for validation messages properly and eliminate <a href="https://en.wiktionary.org/wiki/jank" target="_blank">jank</a>. To show an <code>.errow</code> or <code>.valid</code> message, simply add a <code>.show</code> class to the appropriate message whenever necessary.</p>
         <section class="row wide">
           <h2>Input Examples</h2>
           <div class="row fence fifty">
@@ -77,7 +74,7 @@
               <fieldset>
                 <input type="password" name="password" id="password" placeholder="Placeholder" autocomplete="on">
                 <label for="password">Label</label>
-                <div toggle="#password" class="show-hide-password">
+                <div id="#password" class="show-hide-password">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="show"><path fill="none" d="M0 0h24v24H0z"/><path d="M17.882 19.297A10.949 10.949 0 0 1 12 21c-5.392 0-9.878-3.88-10.819-9a10.982 10.982 0 0 1 3.34-6.066L1.392 2.808l1.415-1.415 19.799 19.8-1.415 1.414-3.31-3.31zM5.935 7.35A8.965 8.965 0 0 0 3.223 12a9.005 9.005 0 0 0 13.201 5.838l-2.028-2.028A4.5 4.5 0 0 1 8.19 9.604L5.935 7.35zm6.979 6.978l-3.242-3.242a2.5 2.5 0 0 0 3.241 3.241zm7.893 2.264l-1.431-1.43A8.935 8.935 0 0 0 20.777 12 9.005 9.005 0 0 0 9.552 5.338L7.974 3.76C9.221 3.27 10.58 3 12 3c5.392 0 9.878 3.88 10.819 9a10.947 10.947 0 0 1-2.012 4.592zm-9.084-9.084a4.5 4.5 0 0 1 4.769 4.769l-4.77-4.769z"/></svg>
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="hide"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 3c5.392 0 9.878 3.88 10.819 9-.94 5.12-5.427 9-10.819 9-5.392 0-9.878-3.88-10.819-9C2.121 6.88 6.608 3 12 3zm0 16a9.005 9.005 0 0 0 8.777-7 9.005 9.005 0 0 0-17.554 0A9.005 9.005 0 0 0 12 19zm0-2.5a4.5 4.5 0 1 1 0-9 4.5 4.5 0 0 1 0 9zm0-2a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/></svg>
                 </div>
@@ -93,7 +90,7 @@
 <pre><code>&lt;fieldset&gt;
   &lt;input type=&quot;password&quot; name=&quot;password&quot; id=&quot;password&quot; placeholder=&quot;Placeholder&quot; autocomplete=&quot;on&quot;&gt;
   &lt;label for=&quot;password&quot;&gt;Label&lt;/label&gt;
-  &lt;div toggle=&quot;#password&quot; class=&quot;show-hide-password&quot;&gt;
+  &lt;div id=&quot;#password&quot; class=&quot;show-hide-password&quot;&gt;
     &lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot; class=&quot;show&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M17.882 19.297A10.949 10.949 0 0 1 12 21c-5.392 0-9.878-3.88-10.819-9a10.982 10.982 0 0 1 3.34-6.066L1.392 2.808l1.415-1.415 19.799 19.8-1.415 1.414-3.31-3.31zM5.935 7.35A8.965 8.965 0 0 0 3.223 12a9.005 9.005 0 0 0 13.201 5.838l-2.028-2.028A4.5 4.5 0 0 1 8.19 9.604L5.935 7.35zm6.979 6.978l-3.242-3.242a2.5 2.5 0 0 0 3.241 3.241zm7.893 2.264l-1.431-1.43A8.935 8.935 0 0 0 20.777 12 9.005 9.005 0 0 0 9.552 5.338L7.974 3.76C9.221 3.27 10.58 3 12 3c5.392 0 9.878 3.88 10.819 9a10.947 10.947 0 0 1-2.012 4.592zm-9.084-9.084a4.5 4.5 0 0 1 4.769 4.769l-4.77-4.769z&quot;/&gt;&lt;/svg&gt;
     &lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot; class=&quot;hide&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M12 3c5.392 0 9.878 3.88 10.819 9-.94 5.12-5.427 9-10.819 9-5.392 0-9.878-3.88-10.819-9C2.121 6.88 6.608 3 12 3zm0 16a9.005 9.005 0 0 0 8.777-7 9.005 9.005 0 0 0-17.554 0A9.005 9.005 0 0 0 12 19zm0-2.5a4.5 4.5 0 1 1 0-9 4.5 4.5 0 0 1 0 9zm0-2a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z&quot;/&gt;&lt;/svg&gt;
   &lt;/div&gt;
@@ -229,7 +226,7 @@
             <div class="column">
               <h3>Buttons</h3>
               <fieldset class="button-input">
-                <input type="button" name="button" id="button" class="button" value="Button" role="button" aria-pressed="false">
+                <input type="button" name="button" id="button" class="button" value="Button" aria-pressed="false">
               </fieldset>
               <p><code>&lt;input&gt;</code> elements of type button are rendered as simple push buttons, which can be programmed to control custom functionality as required when assigned an event handler function (typically for the <code>click</code> event).</p>
               <p><code>&lt;input type=&quot;button&quot;&gt;</code> elements have no default behavior (their cousins, <code>&lt;input type=&quot;submit&quot;&gt;</code> and <code>&lt;input type=&quot;reset&quot;&gt;</code> are used to submit and reset forms, respectively). To make buttons do anything, you have to write JavaScript code to do the work.</p>
@@ -239,7 +236,7 @@
               <figure>
                 <figcaption>html</figcaption>
 <pre><code>&lt;fieldset class=&quot;button-input&quot;&gt;
-  &lt;input type=&quot;button&quot; name=&quot;button&quot; id=&quot;button&quot; class=&quot;button&quot; value=&quot;Button&quot; role=&quot;button&quot; aria-pressed=&quot;false&quot;&gt;
+  &lt;input type=&quot;button&quot; name=&quot;button&quot; id=&quot;button&quot; class=&quot;button&quot; value=&quot;Button&quot; aria-pressed=&quot;false&quot;&gt;
 &lt;/fieldset&gt;</code></pre>
               </figure>
             </div>
@@ -248,10 +245,9 @@
       </article>
     </main>
     <footer>
-      <h1>Footer</h1>
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
-          <ul>
+          <ul id="footer-navigation">
             <li><a href="../../index.html">Overview</a></li>
             <li><a href="../../atoms/atoms.html">Atoms</a></li>
             <li><a href="../../molecules/molecules.html">Molecules</a></li>
@@ -263,7 +259,7 @@
         <section class="meta-content column">
           <div class="logo">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
-            <h1 class="center">The Delta Design System</h1>
+            <h2 class="center">The Delta Design System</h2>
           </div>
           <div class="github">
             <a href="https://github.com/cdfournier/delta-design-system" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 2C6.475 2 2 6.475 2 12a9.994 9.994 0 0 0 6.838 9.488c.5.087.687-.213.687-.476 0-.237-.013-1.024-.013-1.862-2.512.463-3.162-.612-3.362-1.175-.113-.288-.6-1.175-1.025-1.413-.35-.187-.85-.65-.013-.662.788-.013 1.35.725 1.538 1.025.9 1.512 2.338 1.087 2.912.825.088-.65.35-1.087.638-1.337-2.225-.25-4.55-1.113-4.55-4.938 0-1.088.387-1.987 1.025-2.688-.1-.25-.45-1.275.1-2.65 0 0 .837-.262 2.75 1.026a9.28 9.28 0 0 1 2.5-.338c.85 0 1.7.112 2.5.337 1.912-1.3 2.75-1.024 2.75-1.024.55 1.375.2 2.4.1 2.65.637.7 1.025 1.587 1.025 2.687 0 3.838-2.337 4.688-4.562 4.938.362.312.675.912.675 1.85 0 1.337-.013 2.412-.013 2.75 0 .262.188.574.688.474A10.016 10.016 0 0 0 22 12c0-5.525-4.475-10-10-10z"/></svg></a>
@@ -278,7 +274,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://unpkg.com/headroom.js@0.9.4/dist/headroom.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="../../assets/scripts/site.js"></script>
+    <script>
+      AOS.init({duration: 600});
+    </script>
     <script>
       var myElement = document.querySelector('header');
       var headroom  = new Headroom(myElement);
