--- a/organisms/card-groups/card-groups.html
+++ b/organisms/card-groups/card-groups.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ovo&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
   </head>
   <body>
     <header>
-      <h1>Header</h1>
       <div class="logo">
         <a href="../../index.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
@@ -22,7 +23,7 @@
           <svg class="menu-toggle-open" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"/></svg>
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
-        <ul>
+        <ul id="header-navigation">
           <li><a href="../../index.html">Overview</a></li>
           <li><a href="../../atoms/atoms.html">Atoms</a></li>
           <li><a href="../../molecules/molecules.html">Molecules</a></li>
@@ -34,14 +35,10 @@
     </header>
     <main>
       <article>
+        <h1 class="title">Card Groups</h1>
+        <p>We like to use cards and card groups to quickly preview related content. It's a great way to make content more discoverable.</p>
         <section class="row wide">
-          <div class="column">
-            <h1 class="title">Card Groups</h1>
-            <p>We like to use cards and card groups to quickly preview related content. It's a great way to make content more discoverable.</p>
-          </div>
-        </section>
-        <section class="row wide">
-          <h1>Apollo 11 Crew Members</h1>
+          <h2>Apollo 11 Crew Members</h2>
           <div class="card-group">
             <div class="card">
               <figure>
@@ -49,8 +46,8 @@
               <figcaption><cite>Photo: <a href="https://images.nasa.gov/details-9018112" target="_blank">Astronaut Neil Armstrong</a> from NASA</cite></figcaption>
               </figure>
               <div class="text">
-                <h2>Commander Neil Armstrong</h2>
-                <p>Neil Alden Armstrong  (1930-2012) was born on 5 August 1930 on his grandparents' farm near Wapakoneta, Ohio, to Stephen and Viola Armstrong.</p>
+                <h3>Commander Neil Armstrong</h3>
+                <p>Neil Alden Armstrong (1930-2012) was born on 5 August 1930 on his grandparents' farm near Wapakoneta, Ohio, to Stephen and Viola Armstrong.</p>
                 <p class="icon"><a href="https://history.nasa.gov/ap11ann/astrobios.htm#Armstrong" target="_blank">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
@@ -60,7 +57,7 @@
               <figcaption><cite>Photo: <a href="https://images.nasa.gov/details-S69-31742" target="_blank">Astronaut Michael Collins</a> from NASA</cite></figcaption>
               </figure>
               <div class="text">
-                <h2>Command Module Pilot Michael Collins</h2>
+                <h3>Command Module Pilot Michael Collins</h3>
                 <p>Michael Collins (1930- ) was born on October 30, 1930, in Rome, Italy. He later moved to Washington, D.C., where he graduated from St. Albans School.</p>
                 <p class="icon"><a href="https://history.nasa.gov/ap11ann/astrobios.htm#Collins" target="_blank">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
@@ -71,7 +68,7 @@
               <figcaption><cite>Photo: <a href="https://images.nasa.gov/details-S69-31743" target="_blank">Astronaut Edwin E. Aldrin Jr.</a> from NASA</cite></figcaption>
               </figure>
               <div class="text">
-                <h2>Lunar Module Pilot Edwin &#8220;Buzz&#8221; Aldrin</h2>
+                <h3>Lunar Module Pilot Edwin &#8220;Buzz&#8221; Aldrin</h3>
                 <p>Edwin E. Aldrin, Jr. (1930- ) was born in Montclair, New Jersey, on 20 January 1930. He attended the U.S. Military Academy at West Point, entered the United States Air Force, and received pilot training in 1951.</p>
                 <p class="icon"><a href="https://history.nasa.gov/ap11ann/astrobios.htm#Buzz" target="_blank">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
@@ -79,8 +76,12 @@
           </div>
         </section>
         <section class="row wide">
+          <h2>Card Groups Details</h2>
           <div class="column">
-            <figure>
+            <p>At the moment, card groups are optimized for groups of 3. You can include fewer or more than 3 cards in a group, but no more than 3 cards will show up on a single line.</p>
+          </div>
+          <div class="column">
+            <figure style="padding-top: 1rem;">
               <figcaption>html</figcaption>
 <pre><code>&lt;div class=&quot;card-group&quot;&gt;
   &lt;div class=&quot;card&quot;&gt;
@@ -89,8 +90,8 @@
     &lt;figcaption&gt;&lt;cite&gt;Photo: &lt;a href=&quot;https://images.nasa.gov/details-9018112&quot; target=&quot;_blank&quot;&gt;Astronaut Neil Armstrong&lt;/a&gt; from NASA&lt;/cite&gt;&lt;/figcaption&gt;
     &lt;/figure&gt;
     &lt;div class=&quot;text&quot;&gt;
-      &lt;h2&gt;Commander Neil Armstrong&lt;/h2&gt;
-      &lt;p&gt;Neil Alden Armstrong  (1930-2012) was born on 5 August 1930 on his grandparents' farm near Wapakoneta, Ohio, to Stephen and Viola Armstrong.&lt;/p&gt;
+      &lt;h3&gt;Commander Neil Armstrong&lt;/h3&gt;
+      &lt;p&gt;Neil Alden Armstrong (1930-2012) was born on 5 August 1930 on his grandparents' farm near Wapakoneta, Ohio, to Stephen and Viola Armstrong.&lt;/p&gt;
       &lt;p class=&quot;icon&quot;&gt;&lt;a href=&quot;https://history.nasa.gov/ap11ann/astrobios.htm#Armstrong&quot; target=&quot;_blank&quot;&gt;Learn more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
     &lt;/div&gt;
   &lt;/div&gt;
@@ -100,7 +101,7 @@
     &lt;figcaption&gt;&lt;cite&gt;Photo: &lt;a href=&quot;https://images.nasa.gov/details-S69-31742&quot; target=&quot;_blank&quot;&gt;Astronaut Michael Collins&lt;/a&gt; from NASA&lt;/cite&gt;&lt;/figcaption&gt;
     &lt;/figure&gt;
     &lt;div class=&quot;text&quot;&gt;
-      &lt;h2&gt;Command Module Pilot Michael Collins&lt;/h2&gt;
+      &lt;h3&gt;Command Module Pilot Michael Collins&lt;/h3&gt;
       &lt;p&gt;Michael Collins (1930- ) was born on October 30, 1930, in Rome, Italy. He later moved to Washington, D.C., where he graduated from St. Albans School.&lt;/p&gt;
       &lt;p class=&quot;icon&quot;&gt;&lt;a href=&quot;https://history.nasa.gov/ap11ann/astrobios.htm#Collins&quot; target=&quot;_blank&quot;&gt;Learn more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
     &lt;/div&gt;
@@ -111,7 +112,7 @@
     &lt;figcaption&gt;&lt;cite&gt;Photo: &lt;a href=&quot;https://images.nasa.gov/details-S69-31743&quot; target=&quot;_blank&quot;&gt;Astronaut Edwin E. Aldrin Jr.&lt;/a&gt; from NASA&lt;/cite&gt;&lt;/figcaption&gt;
     &lt;/figure&gt;
     &lt;div class=&quot;text&quot;&gt;
-      &lt;h2&gt;Lunar Module Pilot Edwin &amp;#8220;Buzz&amp;#8221; Aldrin&lt;/h2&gt;
+      &lt;h3&gt;Lunar Module Pilot Edwin &amp;#8220;Buzz&amp;#8221; Aldrin&lt;/h3&gt;
       &lt;p&gt;Edwin E. Aldrin, Jr. (1930- ) was born in Montclair, New Jersey, on 20 January 1930. He attended the U.S. Military Academy at West Point, entered the United States Air Force, and received pilot training in 1951.&lt;/p&gt;
       &lt;p class=&quot;icon&quot;&gt;&lt;a href=&quot;https://history.nasa.gov/ap11ann/astrobios.htm#Buzz&quot; target=&quot;_blank&quot;&gt;Learn more&lt;span&gt;&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
     &lt;/div&gt;
@@ -123,10 +124,9 @@
       </article>
     </main>
     <footer>
-      <h1>Footer</h1>
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
-          <ul>
+          <ul id="footer-navigation">
             <li><a href="../../index.html">Overview</a></li>
             <li><a href="../../atoms/atoms.html">Atoms</a></li>
             <li><a href="../../molecules/molecules.html">Molecules</a></li>
@@ -138,7 +138,7 @@
         <section class="meta-content column">
           <div class="logo">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
-            <h1 class="center">The Delta Design System</h1>
+            <h2 class="center">The Delta Design System</h2>
           </div>
           <div class="github">
             <a href="https://github.com/cdfournier/delta-design-system" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 2C6.475 2 2 6.475 2 12a9.994 9.994 0 0 0 6.838 9.488c.5.087.687-.213.687-.476 0-.237-.013-1.024-.013-1.862-2.512.463-3.162-.612-3.362-1.175-.113-.288-.6-1.175-1.025-1.413-.35-.187-.85-.65-.013-.662.788-.013 1.35.725 1.538 1.025.9 1.512 2.338 1.087 2.912.825.088-.65.35-1.087.638-1.337-2.225-.25-4.55-1.113-4.55-4.938 0-1.088.387-1.987 1.025-2.688-.1-.25-.45-1.275.1-2.65 0 0 .837-.262 2.75 1.026a9.28 9.28 0 0 1 2.5-.338c.85 0 1.7.112 2.5.337 1.912-1.3 2.75-1.024 2.75-1.024.55 1.375.2 2.4.1 2.65.637.7 1.025 1.587 1.025 2.687 0 3.838-2.337 4.688-4.562 4.938.362.312.675.912.675 1.85 0 1.337-.013 2.412-.013 2.75 0 .262.188.574.688.474A10.016 10.016 0 0 0 22 12c0-5.525-4.475-10-10-10z"/></svg></a>
@@ -153,7 +153,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://unpkg.com/headroom.js@0.9.4/dist/headroom.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="../../assets/scripts/site.js"></script>
+    <script>
+      AOS.init({duration: 600});
+    </script>
     <script>
       var myElement = document.querySelector('header');
       var headroom  = new Headroom(myElement);
